--- a/containerization-series/02.images-vs-artefacts.md
+++ b/containerization-series/02.images-vs-artefacts.md
@@ -148,6 +148,11 @@ For more integration tips and tricks, visit [Integration Designers](https://inte
 
 ---
 
+Special thanks to my colleague and fellow IBMChampion [Kim Meynendonckx](https://community.ibm.com/community/user/people/kim-meynendonckx) 
+for being a sparring partner on these topics (and the cow discussions)
+
+---
+
 Written by [Matthias Blomme](https://www.linkedin.com/in/matthiasblomme/)
 
 \#IBMChampion \
