--- a/containerization-series/01.the-basics.md
+++ b/containerization-series/01.the-basics.md
@@ -94,7 +94,7 @@ For more integration tips and tricks, visit [Integration Designers](https://inte
 ## Other blogs from the Containerizing IBM ACE series 
 
 * Containerizing IBM ACE: A Blog Series - Images vs Artifacts
-* My Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
+* Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
 * 
 
 ---
