--- a/containerization-series/02.images-vs-artefacts.md
+++ b/containerization-series/02.images-vs-artefacts.md
@@ -1,10 +1,10 @@
-## Containerizing IBM ACE: A Blog Series - Images vs Artifacts
+# Containerizing IBM ACE: A Blog Series - Images vs Artifacts
 
 When people start talking about container images for IBM ACE, you’ll often hear the phrase *“bake vs fry”*. Or at least 
 you should. It sounds a bit like we’re cooking eggs, but it’s actually a handy way to describe two different approaches 
 to building (and shipping) your runtimes.
 
-### Bake
+## Bake
 
 The **bake** approach is about building a custom image that already has your BAR files and everything else you need, 
 baked in (hence the name). The runtime and the applications are packaged together into a self-contained image, ready 
@@ -29,7 +29,7 @@ If you are really serious about baking (bake-off serious), and you want to do a 
 injecting pillar configuration at runtime — you’d need to rebuild the full image to bake the config in. This might be a 
 purist view, but that’s what baking actually implies. Of course, it comes at the cost of reusability, sometimes severely.
 
-### Fry
+## Fry
 
 The **fry** method is the opposite. Here you start with a clean ACE runtime image (possibly supplied by IBM), and only 
 add your BAR files and configurations at deployment time.
@@ -49,7 +49,7 @@ add your BAR files and configurations at deployment time.
 
 Frying is adding salt, pepper, and all your dependencies last minute into your pan, and eating it right there and then.
 
-### What to choose
+## What to choose
 
 With the definitions out of the way, let's look at what it means.
 
@@ -76,7 +76,7 @@ I prefer ad-hoc frying. Shipping small artifacts is a lot simpler, and the artif
 
 Again, no ready-made solutions here, just reflections on the trade-offs.
 
-### Considerations while baking
+## Considerations while baking
 
 When baking, you need to choose what base image you are going to be using. Will it be a vendor-supplied one, like ACE 
 Certified Containers? Or are you starting with a minimal Linux flavor and taking even more control over your runtime? 
@@ -86,7 +86,7 @@ Whatever you decide to do, IBM supports ACE both in ACEcc and in custom installe
 a deciding factor.
 
 
-### Pets and Cattle
+## Pets and Cattle
 
 Even here, the comparison between pets and cattle feels appropriate. Not only can that term be used to describe how you 
 manages your runtimes, but it also fits (in my opinion) with how you build your runtime. Think about it. If you build 
@@ -101,7 +101,7 @@ We ended up agreeing on the fact that neither of us were wrong or right. We both
 First discussion based on this blog: ✅ check .
 
 
-### Some Takeaways
+## Some Takeaways
 
 Here's what I've learned so far
 
@@ -115,7 +115,7 @@ Small remark about that last point, with config I mean ALL config. Including ide
 you would normally keep separate from the image.
 
 
-### Quick Comparison
+## Quick Comparison
 
 | Aspect             | Bake                                                                                        | Fry                                      |
 | ------------------ |---------------------------------------------------------------------------------------------| ---------------------------------------- |
@@ -142,7 +142,7 @@ For more integration tips and tricks, visit [Integration Designers](https://inte
 
 ## Other blogs from the Containerizing IBM ACE series
 
-* Containerizing IBM ACE: A Blog Series – The Basics
+* [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
 * My Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
 *
 
