--- a/containerization-series/03.things-to-consider-in-containers.md
+++ b/containerization-series/03.things-to-consider-in-containers.md
@@ -1,4 +1,4 @@
-# My Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
+# Containerizing IBM ACE: A Blog Series - Things to Consider in Containers
 
 When people talk about running workloads in containers, it’s easy to get swept up in the hype. Containers solve a lot of 
 problems: portability, speed, consistency. But they also reshape old challenges in new ways. This isn’t a “best practices” 
@@ -10,23 +10,23 @@ to bite you (silver bullet, biting, let’s hope it isn’t a full moon tonight)
 Containers are ephemeral by nature, but ACE doesn’t always play by that rule. Some parts of the runtime *do* need 
 persistence:
 
-* Logs and monitoring data you don’t want to lose when a pod restarts.
-* ACE dashboards, which remain persistent even if the runtime itself is disposable.
+* Logs and monitoring data, you don’t want to lose when a pod restarts.
+* ACE dashboards (including bar file storage), which remain persistent even if the runtime itself is disposable.
 * File processing flows, which often require **network storage** so files can survive restarts and be shared between nodes.
 * MQ messages, which must be persistent to prevent data loss.
 
-The point isn’t that persistence (or the lack of it) is bad. It’s that you need to plan it explicitly rather than relying 
-on the container itself to hold your state.
+The point isn’t that persistence (or the lack thereof) is bad. It’s that you need to plan it explicitly rather than relying 
+on the container itself to hold your state. You might end up with a couple of surprises if you don't.
 
 ## Networking
 
 Networking in containers looks simple until you hit production. With ACE, you’ll want to think about:
 
-* **Internal service discovery**: how your ACE runtimes talk to other services.
+* **Internal service discovery**: how your ACE runtimes talk to other services and MQ.
 * **Exposing your containers to the outside world**: think ingress, routes, or load balancers. Don’t just “expose 
-* everything and hope for the best.” Secure, controlled access matters.
+everything and hope for the best.” Secure, controlled access matters and it helps if you know the hostnames.
 * For APIs, consider an **API gateway** layered on top of your ACE flows. It adds governance and security beyond just 
-* pointing traffic straight at your pods.
+pointing traffic straight at your pods.
 
 ## Scaling
 
@@ -34,31 +34,40 @@ One of the big promises of containers is easy scaling, but it’s not just a tec
 
 * You can scale vertically (more resources for a container) or horizontally (more replicas).
 * Autoscaling can help smooth workloads, but watch your licensing model. **More CPU = more PVUs = more money.** Scaling 
-* decisions directly affect your bill.
+decisions directly affect your bill.
+
+The best thing to do is plan for scaling. This directly contracts the whole automatic aspect of autoscaling, but it is the
+only way to keep a firm grip on that purse.
 
 So yes, scale when you need to, but don’t ignore the financial side.
 
 ## Resource Management
 
-ACE can be heavy at startup. If you’ve ever watched a container sit in “pending” or crashloop, you know what I mean. 
-Setting CPU and memory requests and limits properly avoids the noisy neighbor effect.
+ACE can be heavy at startup. If you’ve ever watched a container sit in “pending” or crashloop (or oomrestart), you know 
+what I mean. Setting CPU and memory requests and limits properly avoids the noisy neighbor effect.
 
 And since **Kubernetes 1.33**, you can define **startup resources**: a temporary boost to help pods through initialization 
 before they settle into normal runtime limits. For ACE, that can make a real difference in startup stability. Now we just 
 have to wait for the operator to support this as well.
+
+Something else to think about: init containers. A short lived init container (it has to be short lived, sub 15min) might 
+help take some startup load of your actual runtime. You could potentially delegate some compile or initialization tasks
+so that they don't have to be done by the ACE runtime.
 
 ## Configuration Management & Secrets
 
 Baking everything into an image works for some setups, but often you’ll want to inject configs dynamically. Common 
 approaches:
 
-* **Environment variables**: simple, but not great for sensitive data.
+* **Environment variables**: simple, but not great for sensitive data. Although you can inject vault credentials into 
+environment variables at container startup, making it more secure and practical.
 * **Mounting ConfigMaps or Secrets**: inject files directly into the container filesystem.
 * **External secret stores**: more advanced, but sometimes worth the setup.
 * **ACE built-in vault**: can be injected via Kubernetes secrets mounted as a file, which lets you integrate ACE’s 
 * native vault with containerized deployments.
 
-Whichever you pick, make sure it scales across dev, test, and prod without becoming a nightmare to maintain.
+Changes are, you'll end up with a combination of the above options. Whichever you pick, make sure it scales across dev, 
+test, and prod without becoming a nightmare to maintain. 
 
 ## Security & Monitoring
 
