--- a/containerization-series/04.scoping-your-runtime.md
+++ b/containerization-series/04.scoping-your-runtime.md
@@ -1,4 +1,4 @@
-# Scoping your runtimes — discussion draft
+# Containerizing IBM ACE: A Blog Series - Scoping your runtimes
 
 ## 1. Performance and startup
 
